--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,6 +69,6 @@
     @apply border-border;
   }
   body {
-    @apply font-geist-sans bg-background text-foreground;
+    @apply bg-background font-geist-sans text-foreground;
   }
 }
